--- a/build.gradle
+++ b/build.gradle
@@ -12,10 +12,13 @@ test {
 }
 
 dependencies {
-    implementation 'org.junit.jupiter:junit-jupiter-api:5.8.2'
-    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.8.2'
-    testImplementation 'org.junit.jupiter:junit-jupiter-params:5.8.2'
+    implementation 'org.jetbrains:annotations:20.1.0'
+    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.9.2'
+    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.9.2'
+    testImplementation 'org.junit.jupiter:junit-jupiter-params:5.9.2'
     implementation 'org.junit.platform:junit-platform-engine:1.8.2'
     testImplementation 'io.qameta.allure:allure-junit5:2.7.0'
     implementation 'com.github.javafaker:javafaker:1.0.2'
+//    testImplementation 'org.assertj:assertj-core:3.24.2'
+//    testImplementation 'com.github.stefanbirkner:system-rules:1.16.0'
 }
