--- a/build.gradle
+++ b/build.gradle
@@ -13,6 +13,7 @@ test {
 
 dependencies {
     implementation 'org.junit.jupiter:junit-jupiter-api:5.8.2'
+    testImplementation 'junit:junit:4.13.1'
     testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.8.2'
     testImplementation 'org.junit.jupiter:junit-jupiter-params:5.8.2'
     implementation 'org.junit.platform:junit-platform-engine:1.8.2'
